Added config for all generator things

--- a/res/config/Terrain.config
+++ b/res/config/Terrain.config
@@ -1,6 +1,9 @@
 size=10
 >generator
-    amplitude=30
+    persistence=1
+	frequency=0.05
+	amplitude=30
+	octaves=2
 >end
 >chunk
     pointsPerChunk=9
