--- a/res/config/Terrain.config
+++ b/res/config/Terrain.config
@@ -1,11 +1,20 @@
 size=10
+#perlin noise generator
 >generator
+	#how much amplitude falls off over octaves
     persistence=1
+	
+	#frequency of noise
 	frequency=0.05
+	
+	#amplitude of height map
 	amplitude=30
+	
+	#number of "passes" for height
 	octaves=2
 >end
 >chunk
+	#number of heightmap points per chunk
     pointsPerChunk=9
 >end
 >visual
