Changed config format

--- a/res/config/Terrain.config
+++ b/res/config/Terrain.config
@@ -1,6 +1,6 @@
 size=10
 #perlin noise generator
->generator
+<generator
 	#how much amplitude falls off over octaves
     persistence=1
 	
@@ -12,11 +12,11 @@ size=10
 	
 	#number of "passes" for height
 	octaves=2
->end
->chunk
+>
+<chunk
 	#number of heightmap points per chunk
     pointsPerChunk=20
->end
->visual
+>
+<visual
     color=red
->end
+>
